[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/sketch_control/preview.gd" type="Script" id=1]
[ext_resource path="res://src/ui/file_dialog/FilePicker.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
shadow_color = Color( 0, 0, 0, 0.207843 )
shadow_size = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )
border_color = Color( 0, 0.45098, 0.752941, 1 )
shadow_color = Color( 0, 0, 0, 0.282353 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="PreviewPopout" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.56366
margin_top = 0.781799
margin_right = 1.56372
margin_bottom = 0.781799
rect_pivot_offset = Vector2( 0, 360 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 128
custom_constants/margin_top = 64
custom_constants/margin_left = 128
custom_constants/margin_bottom = 64
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 128.0
margin_top = 64.0
margin_right = 1152.0
margin_bottom = 656.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_right = 1024.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 1024.0
margin_bottom = 592.0

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 1024.0

[node name="TextEdit" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/Control"]
margin_left = 12.0
margin_top = 34.0
margin_right = 1009.0
margin_bottom = 579.0
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Control"]
margin_left = 964.112
margin_top = 6.1272
margin_right = 1019.11
margin_bottom = 32.1272
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File" type="MenuButton" parent="Panel/MarginContainer/VBoxContainer/Control"]
margin_left = 17.0
margin_top = 3.0
margin_right = 52.0
margin_bottom = 29.0
text = "File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filepicker" type="MarginContainer" parent="Panel"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1279.0
margin_bottom = 713.0
mouse_filter = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/Filepicker"]
margin_right = 1272.0
margin_bottom = 706.0

[node name="TextAttach" type="MarginContainer" parent="Panel/Filepicker/VBoxContainer"]
margin_right = 1272.0
margin_bottom = 706.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FilePicker" parent="Panel/Filepicker/VBoxContainer/TextAttach" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 1272.0
margin_bottom = 706.0
custom_styles/panel = SubResource( 2 )
mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Filepicker/VBoxContainer/TextAttach"]
margin_right = 1272.0
margin_bottom = 706.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/selection_color = Color( 0.439216, 0.439216, 0.439216, 0.4 )
scroll_following = true
selection_enabled = true

[node name="Openpicker" type="MarginContainer" parent="Panel"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1279.0
margin_bottom = 713.0
mouse_filter = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/Openpicker"]
margin_right = 1272.0
margin_bottom = 706.0

[node name="TextAttach" type="MarginContainer" parent="Panel/Openpicker/VBoxContainer"]
margin_right = 1272.0
margin_bottom = 706.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OpenPicker" parent="Panel/Openpicker/VBoxContainer/TextAttach" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 1272.0
margin_bottom = 706.0
custom_styles/panel = SubResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Openpicker/VBoxContainer/TextAttach"]
margin_right = 1272.0
margin_bottom = 706.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/selection_color = Color( 0.439216, 0.439216, 0.439216, 0.4 )
scroll_following = true
selection_enabled = true

[connection signal="file_picked" from="Panel/Filepicker/VBoxContainer/TextAttach/FilePicker" to="." method="_on_FilePicker_file_picked"]
[connection signal="file_picked" from="Panel/Openpicker/VBoxContainer/TextAttach/OpenPicker" to="." method="_on_OpenPicker_file_picked"]
